fixed bugs, function, aligned vars with model, css

--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,39 @@ table {
   border: 2px solid #ccc;
   border-radius: 8px;
   text-align: center;
+  font-size: 15px;
+  cursor: pointer;
 }
 
 td:hover {
   background-color: #ccc;
 }
 
-.hidden {
-  display: none;
+@keyframes explosion {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+table .shown {
+  transition: 0.8s;
+  font-size: 15px;
+  border: 5px;
+  border-radius: 8px;
+  background-color: #d0afff;
+  /* background: red; */
+}
+
+table .shownMine {
+  animation: explosion 0.5s ease-in-out;
+  /* transition: 0.8s; */
+  font-size: 15px;
+  border: 5px;
+  border-radius: 8px;
+  background-color: #e04242;
+  /* background: red; */
 }
